* Se agrega el control de teclado y mouse.\n * se crea la clase GameEngine, con su respectivo gameLoop.\n * Se agregan las entidades basicas y se asocian con sus sprites

--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 	<head>
 	</head>
 	<body>
-		<canvas id="myCanvas" width="300" height="300" style="border:1px solid #000000;">
-		</canvas>
-		<script type="text/javascript" src="js/prototype.js"></script>
+		<table>
+			<tr><td>
+				<canvas id="myCanvas" width="10" height="10" style="border:1px solid #000000;">
+				</canvas>
+			</td>
+			<td valign="top">
+				<div id="divStats"></div>
+			</td></tr>
+		</table>
+		<script type="text/javascript" src="js/Util/prototype.js"></script>
+		<script type="text/javascript" src="js/Util/stats.js"></script>
 		<script type="text/javascript" src="js/xhr.js"></script>
 		<script type="text/javascript" src="js/Sprite.js"></script>
 		<script type="text/javascript" src="js/SpriteController.js"></script>
-		<script type="text/javascript" src="js/testSprites.js"></script>
+		<script type="text/javascript" src="js/InputEngine.js"></script>
+		<script type="text/javascript" src="js/Entities/Entity.js"></script>
+		<script type="text/javascript" src="js/Entities/GunTarget.js"></script>
+		<script type="text/javascript" src="js/GameEngine.js"></script>
 
 	</body>
 </html>
