* Se corrige la creación de entidades. * No se utilizará mas la libreria prototype

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				<div id="divStats"></div>
 			</td></tr>
 		</table>
-		<script type="text/javascript" src="js/Util/prototype.js"></script>
+		<!--<script type="text/javascript" src="js/Util/prototype.js"></script>-->
 		<script type="text/javascript" src="js/Util/stats.js"></script>
 		<script type="text/javascript" src="js/xhr.js"></script>
 		<script type="text/javascript" src="js/Sprite.js"></script>
