--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		<script type="text/javascript" src="js/Entities/GunTarget.js"></script>
 		<script type="text/javascript" src="js/Entities/Bullet.js"></script>
 		<script type="text/javascript" src="js/Entities/Player.js"></script>
+		<script type="text/javascript" src="js/Entities/Enemy.js"></script>
 		<script type="text/javascript" src="js/GameEngine.js"></script>
 	<!--==============================-->
 	<!-- CARGUE DEL JUEGO             -->
